# gcta

./: CMakeLists.txt
main/: gcta.h
test/: CMakeLists.txt
test/tests/: CMakeLists.txt
